Put Afternoon Cupcakes last, and make the image inside much smaller

--- a/index.html
+++ b/index.html
@@ -158,38 +158,6 @@
             </div>
           </div>
         </div>
-        <div class="thumbnail" onclick="showOverlay('cupcakes-overlay')">
-          <img
-            src="./src/media/cupcakes_thumbnail.png"
-            alt="Afternoon Cupcakes Logo"
-          />
-        </div>
-        <div id="cupcakes-overlay" class="project-overlay">
-          <div class="overlay-panel">
-            <div class="fixed-wrapper">
-              <button
-                class="close-overlay"
-                onclick="hideOverlay('cupcakes-overlay')"
-              >
-                <i class="fa-solid fa-xmark"></i>
-              </button>
-            </div>
-            <h2 class="text-center mb">Afternoon Cupcakes - Logo</h2>
-            <p>
-              As an exercise, I challenged myself to make a logo for a bakery,
-              and came up with this. I did this back in high school, but I still
-              think it's cute. I remember being pleased with the font at the
-              time (Abril Fatface if you're curious).
-            </p>
-            <div class="centered-column">
-              <img
-                src="./src/media/cupcakes_thumbnail.png"
-                alt="Afternoon Cupcakes Logo"
-                loading="lazy"
-              />
-            </div>
-          </div>
-        </div>
         <div class="thumbnail" onclick="showOverlay('amoriem-overlay')">
           <img
             src="./src/media/amoriem/amoriem_thumbnail.jpg"
@@ -488,6 +456,38 @@
               <img
                 src="./src/media/nmg/nmg_large_with_bg.png"
                 alt="New Matrix Group logo, extended"
+                loading="lazy"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail" onclick="showOverlay('cupcakes-overlay')">
+          <img
+            src="./src/media/cupcakes_thumbnail.png"
+            alt="Afternoon Cupcakes Logo"
+          />
+        </div>
+        <div id="cupcakes-overlay" class="project-overlay">
+          <div class="overlay-panel">
+            <div class="fixed-wrapper">
+              <button
+                class="close-overlay"
+                onclick="hideOverlay('cupcakes-overlay')"
+              >
+                <i class="fa-solid fa-xmark"></i>
+              </button>
+            </div>
+            <h2 class="text-center mb">Afternoon Cupcakes - Logo</h2>
+            <p>
+              As an exercise, I challenged myself to make a logo for a bakery,
+              and came up with this. I did this back in high school, but I still
+              think it's cute. I remember being pleased with the font at the
+              time (Abril Fatface if you're curious).
+            </p>
+            <div class="centered-column contain-img-height-440">
+              <img
+                src="./src/media/cupcakes_thumbnail.png"
+                alt="Afternoon Cupcakes Logo"
                 loading="lazy"
               />
             </div>
