Edits to GRIT project text

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             </div>
             <h2 class="text-center mb">GRIT - Logo</h2>
             <p>
-              In high school I started to see a lot of graphic design content on
+              I started to see a lot of graphic design content on
               social media, and felt inspired to practice some new techniques. I
               wanted to try my hand at creating a wordmark for a logo from
               scratch - that is, by constructing the letters myself rather than
